Attempt to fix map auto width on mobile

--- a/app/assets/stylesheets/public.sass
+++ b/app/assets/stylesheets/public.sass
@@ -288,6 +288,8 @@ table.neat_table.checklist_table
     max-width: 100%
     height: auto
     border: 1px solid #aaaaaa
+    @media only all and (max-width: 630px)
+      width: 100%
 
 table.monthly
   td
